use same tycho version all over the place

--- a/features/com.springsource.ggts.product/pom.xml
+++ b/features/com.springsource.ggts.product/pom.xml
@@ -97,7 +97,7 @@
       <plugin>
           <groupId>org.eclipse.tycho.extras</groupId>
           <artifactId>tycho-p2-extras-plugin</artifactId>
-          <version>0.14.0</version>
+          <version>${tycho-version}</version>
           <executions>
               <execution>
                   <phase>verify</phase>
@@ -176,6 +176,7 @@
 										<include name="artifacts.jar" />
 										<include name="plugins/**" />
 										<include name="features/**" />
+										<include name="binary/**" />
 									</fileset>
 								</delete>
 
@@ -262,7 +263,7 @@
       <plugin>
           <groupId>org.eclipse.tycho.extras</groupId>
           <artifactId>tycho-eclipserun-plugin</artifactId>
-          <version>0.14.0</version>
+          <version>${tycho-version}</version>
           <executions>
               <execution>
 				<id>root-features-osx-32bit</id>
