Enabled welcome page for GGTS, moved welcome content into STS & GGTS branding plugins.

--- a/plugins/com.springsource.ggts/build.properties
+++ b/plugins/com.springsource.ggts/build.properties
@@ -23,6 +23,8 @@ bin.includes = META-INF/,\
                sts-license-1.0.html,\
                OSGI-INF/,\
                lib/,\
-               .
+               .,\
+               content/,\
+               introContent.xml
 output.library.jar = bin/
 source.. = src/
