updated all the license information with the latest license files from legal

--- a/plugins/org.springsource.ggts/build.properties
+++ b/plugins/org.springsource.ggts/build.properties
@@ -19,8 +19,7 @@ bin.includes = META-INF/,\
                feature_image.png,\
                sts128.png,\
                sts64.png,\
-               about.html,\
-               sts-license-1.0.html,\
+               open_source_licenses.txt,\
                OSGI-INF/,\
                lib/,\
                .,\
