--- a/features/org.springsource.ggts/build.properties
+++ b/features/org.springsource.ggts/build.properties
@@ -1,10 +1,7 @@
 bin.includes = feature.xml,\
                feature.properties,\
-               about.html,\
-               sts-license-1.0.html
+               license.txt
 src.includes = feature.xml,\
                feature.properties,\
-               about.html,\
                build.properties,\
-               sts-license-1.0.html
-
+               license.txt
