--- a/features/org.springsource.sts.package.e3.6/build.properties
+++ b/features/org.springsource.sts.package.e3.6/build.properties
@@ -1,7 +1,6 @@
 bin.includes=feature.xml,\
              feature.properties,\
-             about.html,\
-             sts-license-1.0.html,\
+             license.txt,\
              p2.inf
               
 #	root.win32.win32.x86=rootfiles/win32.win32.x86
