fixed wrong build.properties

--- a/features/org.springsource.sts.package.e4.2/build.properties
+++ b/features/org.springsource.sts.package.e4.2/build.properties
@@ -1,7 +1,7 @@
 bin.includes=feature.xml,\
              feature.properties,\
              license.txt,\
-             open_source_licenses,\
+             open_source_licenses.txt,\
              p2.inf
               
 root=file:open_source_licenses.txt,file:license.txt
