fix for broken build and release id replacement during the product build

--- a/plugins/org.springsource.ggts/about.properties
+++ b/plugins/org.springsource.ggts/about.properties
@@ -6,11 +6,11 @@
 
 title=Groovy/Grails Tool Suite \n\
 \n\
-Version: 3.0.0.SNAPSHOT\n\
-Build Id: 201207291908\n\
+Version: @QUALIFIER@\n\
+Build Id: @BUILD_ID@\n\
 \n\
 Copyright (c) 2007 - 2012 SpringSource, a division of VMware, Inc.\n\
-All rights reserved. Visit http://springsource.com/products/sts\n\
+All rights reserved. Visit http://springsource.org/ggts\n\
 \n\
 This product includes software developed by the\n\
 Apache Software Foundation http://www.apache.org
