more fixes for broken build and release id replacement during the product build

--- a/plugins/org.springsource.ggts/plugin.properties
+++ b/plugins/org.springsource.ggts/plugin.properties
@@ -15,7 +15,7 @@ Apache Software Foundation http://www.apache.org
 
 introCustomizationPreference.name = Welcome
 
-productIntroTitle = Welcome to Groovy/Grails Tool Suite 3.0.0.SNAPSHOT
+productIntroTitle = Welcome to Groovy/Grails Tool Suite @QUALIFIER@
 productIntroBrandingText = Groovy/Grails Tool Suite
 introDescription-overview = The Eclipse Platform is a kind of universal tool platform - an open extensible IDE for anything and nothing in particular. 
 introDescription-tutorials = Learn how to be productive using Eclipse by completing end-to-end tutorials that will guide you along the way.
