--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -289,8 +289,7 @@
             <configuration>
               <target>
                 <ant
-                  antfile="${project.parent.relativePath}/common/build-remove-uncategorized.xml">
-                  <property name="localRepository" value="${settings.localRepository}" />
+                  antfile="../../common/build-remove-uncategorized.xml">
                   <property name="projectDir" value="${project.build.directory}" />
                 </ant>
               </target>
