--- a/features/org.springsource.ggts.product/pom.xml
+++ b/features/org.springsource.ggts.product/pom.xml
@@ -140,7 +140,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.6</version>
+				<version>1.7</version>
 				<executions>
 
 					<execution>
@@ -236,6 +236,7 @@
 						<id>upload-grails-product</id>
 						<phase>deploy</phase>
 						<configuration>
+							<skip>${skip.plain-product-upload}</skip>
 							<target>
 
 								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
