added explicit property passing to antcall when building distribution bundles

--- a/releng/org.springsource.ggts.distribution-bundles/pom.xml
+++ b/releng/org.springsource.ggts.distribution-bundles/pom.xml
@@ -65,6 +65,7 @@
 						<configuration>
 							<target>
 								<property name="unqualifiedVersion" value="${unqualifiedVersion}" />
+								<property name="p2.qualifier" value="${p2.qualifier}" />
 								<ant antfile="../../common/build-distribution.xml" target="create-bundled-distribution-ggts" />
 							</target>
 						</configuration>
