fixing the problem of failing additional root feature installs during the product build

--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -279,10 +279,7 @@
 						<id>root-features-osx-32bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.cocoa.x86}/sts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.cocoa.x86}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -294,10 +291,7 @@
 						<id>root-features-osx-64bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.cocoa.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.cocoa.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -309,10 +303,7 @@
 						<id>root-features-linux-32bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.linux.x86}/sts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.linux.x86}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -324,10 +315,7 @@
 						<id>root-features-linux-64bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.linux.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.linux.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -339,10 +327,7 @@
 						<id>root-features-win-32bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.win.x86}/sts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.win.x86}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -354,10 +339,7 @@
 						<id>root-features-win-64bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.win.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.win.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
