--- a/features/org.springsource.ggts.product/pom.xml
+++ b/features/org.springsource.ggts.product/pom.xml
@@ -352,10 +352,7 @@
 						<id>root-features-osx-32bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.cocoa.x86}/ggts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.cocoa.x86}/ggts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -367,10 +364,7 @@
 						<id>root-features-osx-64bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.cocoa.x86_64}/ggts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.cocoa.x86_64}/ggts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -382,10 +376,7 @@
 						<id>root-features-linux-32bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.linux.x86}/ggts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.linux.x86}/ggts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -397,10 +388,7 @@
 						<id>root-features-linux-64bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.linux.x86_64}/ggts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.linux.x86_64}/ggts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -412,10 +400,7 @@
 						<id>root-features-win-32bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.win.x86}/ggts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.win.x86}/ggts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
@@ -427,10 +412,7 @@
 						<id>root-features-win-64bit</id>
 						<configuration>
 							<argLine>-Declipse.p2.mirrors=false</argLine>
-							<appArgLine>-consoleLog -application
-								org.eclipse.equinox.p2.director -nosplash -destination
-								${build.destination.win.x86_64}/ggts-${unqualifiedVersion}.${p2.qualifier}
-								-repository ${sites} -installIUs ${features}</appArgLine>
+							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.win.x86_64}/ggts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
 							<goal>eclipse-run</goal>
