fixing parameter passing to ant script for buliding distribution bundles

--- a/releng/org.springsource.ggts.distribution-bundles/pom.xml
+++ b/releng/org.springsource.ggts.distribution-bundles/pom.xml
@@ -64,9 +64,10 @@
 						<phase>verify</phase>
 						<configuration>
 							<target>
-								<property name="unqualifiedVersion" value="${unqualifiedVersion}" />
-								<property name="p2.qualifier" value="${p2.qualifier}" />
-								<ant antfile="../../common/build-distribution.xml" target="create-bundled-distribution-ggts" />
+								<ant antfile="../../common/build-distribution.xml" target="create-bundled-distribution-ggts">
+									<property name="unqualifiedVersion" value="${unqualifiedVersion}" />
+									<property name="p2.qualifier" value="${p2.qualifier}" />
+								</ant>
 							</target>
 						</configuration>
 						<goals>
