--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -278,7 +278,7 @@
 					<execution>
 						<id>root-features-osx-32bit</id>
 						<configuration>
-							<argLine>-Declipse.p2.mirrors=false</argLine>
+							<argLine>-Declipse.p2.mirrors=false -Dorg.eclipse.ecf.provider.filetransfer.excludeContributors=org.eclipse.ecf.provider.filetransfer.httpclient</argLine>
 							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.cocoa.x86}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
@@ -290,7 +290,7 @@
 					<execution>
 						<id>root-features-osx-64bit</id>
 						<configuration>
-							<argLine>-Declipse.p2.mirrors=false</argLine>
+							<argLine>-Declipse.p2.mirrors=false -Dorg.eclipse.ecf.provider.filetransfer.excludeContributors=org.eclipse.ecf.provider.filetransfer.httpclient</argLine>
 							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.cocoa.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
@@ -302,7 +302,7 @@
 					<execution>
 						<id>root-features-linux-32bit</id>
 						<configuration>
-							<argLine>-Declipse.p2.mirrors=false</argLine>
+							<argLine>-Declipse.p2.mirrors=false -Dorg.eclipse.ecf.provider.filetransfer.excludeContributors=org.eclipse.ecf.provider.filetransfer.httpclient</argLine>
 							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.linux.x86}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
@@ -314,7 +314,7 @@
 					<execution>
 						<id>root-features-linux-64bit</id>
 						<configuration>
-							<argLine>-Declipse.p2.mirrors=false</argLine>
+							<argLine>-Declipse.p2.mirrors=false -Dorg.eclipse.ecf.provider.filetransfer.excludeContributors=org.eclipse.ecf.provider.filetransfer.httpclient</argLine>
 							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.linux.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
@@ -326,7 +326,7 @@
 					<execution>
 						<id>root-features-win-32bit</id>
 						<configuration>
-							<argLine>-Declipse.p2.mirrors=false</argLine>
+							<argLine>-Declipse.p2.mirrors=false -Dorg.eclipse.ecf.provider.filetransfer.excludeContributors=org.eclipse.ecf.provider.filetransfer.httpclient</argLine>
 							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.win.x86}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
@@ -338,7 +338,7 @@
 					<execution>
 						<id>root-features-win-64bit</id>
 						<configuration>
-							<argLine>-Declipse.p2.mirrors=false</argLine>
+							<argLine>-Declipse.p2.mirrors=false -Dorg.eclipse.ecf.provider.filetransfer.excludeContributors=org.eclipse.ecf.provider.filetransfer.httpclient</argLine>
 							<appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.win.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier} -repository ${sites} -installIUs ${features}</appArgLine>
 						</configuration>
 						<goals>
